feat: config crsf token

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOBID_DATABASE_USER="gobid"
 GOBID_DATABASE_PASSWORD="password"
 GOBID_DATABASE_NAME="gobid"
 GOBID_DATABASE_HOST="localhost"
+GOBID_CSRF_KEY="W9p7lZ5qA8tBmV0Xn2RhD6VsC1PgUw3K"
